# ad-mcp-bridge-server

./: LICENSE  README.md  pyproject.toml
src/ad_mcp_bridge_server/: __init__.py  __main__.py  config.py  odoo_client.py  server.py
